# Hack-The-Kernel

./: .gitignore  CMakeLists.txt  README.md
kern/include/: synch.h
kern/thread/: synch.c
